# keepassx-min

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  COPYING  README.md  release-tool.py  vcpkg.json
share/: CMakeLists.txt
share/icons/: icons.qrc
share/linux/: keepassx-min.desktop.in  keepassx-min.xml.in  org.keepassxc.KeePassXC.appdata.xml
share/translations/: CMakeLists.txt  keepassxc_en.ts  keepassxc_it.ts  keepassxc_tr.ts  keepassxmin_ar.ts  keepassxmin_be.ts  keepassxmin_bg.ts  keepassxmin_ca.ts  keepassxmin_cs.ts  keepassxmin_da.ts  keepassxmin_de.ts  keepassxmin_el.ts  keepassxmin_en.ts  keepassxmin_en_GB.ts  keepassxmin_en_US.ts  keepassxmin_es.ts  keepassxmin_et.ts  keepassxmin_fi.ts  keepassxmin_fil.ts  keepassxmin_fr.ts  keepassxmin_fr_CA.ts  keepassxmin_he.ts  keepassxmin_hr.ts  keepassxmin_hu.ts  keepassxmin_id.ts  keepassxmin_it.ts  keepassxmin_ja.ts  keepassxmin_km.ts  keepassxmin_ko.ts  keepassxmin_lt.ts  keepassxmin_my.ts  keepassxmin_nb.ts  keepassxmin_nl.ts  keepassxmin_pl.ts  keepassxmin_pt_BR.ts  keepassxmin_pt_PT.ts  keepassxmin_ro.ts  keepassxmin_ru.ts  keepassxmin_si.ts  keepassxmin_sk.ts  (+10 more)
src/: CMakeLists.txt  config-keepassx.h.cmake  main.cpp
src/autotype/: AutoType.cpp  AutoType.h  AutoTypeAction.cpp  AutoTypeAction.h  AutoTypeMatch.h  AutoTypeMatchModel.cpp  AutoTypeMatchModel.h  AutoTypeMatchView.cpp  AutoTypeMatchView.h  AutoTypePlatformPlugin.h  AutoTypeSelectDialog.cpp  AutoTypeSelectDialog.h  PickcharsDialog.cpp  PickcharsDialog.h  ShortcutWidget.cpp  ShortcutWidget.h  WindowSelectComboBox.cpp  WindowSelectComboBox.h
src/browser/: BrowserAccessControlDialog.cpp  BrowserAccessControlDialog.h  BrowserAction.cpp  BrowserAction.h  BrowserCbor.cpp  BrowserCbor.h  BrowserEntryConfig.cpp  BrowserEntryConfig.h  BrowserEntrySaveDialog.cpp  BrowserEntrySaveDialog.h  BrowserHost.cpp  BrowserHost.h  BrowserMessageBuilder.cpp  BrowserMessageBuilder.h  BrowserPasskeys.cpp  BrowserPasskeys.h  BrowserPasskeysClient.cpp  BrowserPasskeysClient.h  BrowserPasskeysConfirmationDialog.cpp  BrowserPasskeysConfirmationDialog.h  BrowserService.cpp  BrowserService.h  BrowserSettings.cpp  BrowserSettings.h  BrowserSettingsPage.cpp  BrowserSettingsPage.h  BrowserSettingsWidget.cpp  BrowserSettingsWidget.h  BrowserShared.cpp  BrowserShared.h  CustomTableWidget.cpp  CustomTableWidget.h  NativeMessageInstaller.cpp  NativeMessageInstaller.h  PasskeyUtils.cpp  PasskeyUtils.h
src/cli/: Add.cpp  Add.h  AddGroup.cpp  AddGroup.h  Analyze.cpp  Analyze.h  AttachmentExport.cpp  AttachmentExport.h  AttachmentImport.cpp  AttachmentImport.h  AttachmentRemove.cpp  AttachmentRemove.h  CMakeLists.txt  Clip.cpp  Clip.h  Close.cpp  Close.h  Command.cpp  Command.h  DatabaseCommand.cpp  DatabaseCommand.h  DatabaseCreate.cpp  DatabaseCreate.h  DatabaseEdit.cpp  DatabaseEdit.h  DatabaseInfo.cpp  DatabaseInfo.h  Diceware.cpp  Diceware.h  Edit.cpp  Edit.h  Estimate.cpp  Estimate.h  Exit.cpp  Exit.h  Export.cpp  Export.h  Generate.cpp  Generate.h  Help.cpp  (+24 more)
src/core/: Alloc.cpp  AsyncTask.h  AutoTypeAssociations.cpp  AutoTypeAssociations.h  Base32.cpp  Base32.h  Bootstrap.cpp  Bootstrap.h  Clock.cpp  Clock.h  Compare.h  Config.cpp  Config.h  CustomData.cpp  CustomData.h  Database.cpp  Database.h  DatabaseStats.cpp  DatabaseStats.h  Endian.h  Entry.cpp  Entry.h  EntryAttachments.cpp  EntryAttachments.h  EntryAttributes.cpp  EntryAttributes.h  EntrySearcher.cpp  EntrySearcher.h  Exporter.h  FileWatcher.cpp  FileWatcher.h  Global.h  Group.cpp  Group.h  HibpDownloader.cpp  HibpDownloader.h  HibpOffline.cpp  HibpOffline.h  InactivityTimer.cpp  InactivityTimer.h  (+33 more)
src/crypto/: Crypto.cpp  Crypto.h  CryptoHash.cpp  CryptoHash.h  Random.cpp  Random.h  SymmetricCipher.cpp  SymmetricCipher.h
src/fdosecrets/: CMakeLists.txt  FdoSecretsPlugin.cpp  FdoSecretsPlugin.h  FdoSecretsSettings.cpp  FdoSecretsSettings.h
src/format/: BitwardenReader.cpp  BitwardenReader.h  CsvExporter.cpp  CsvExporter.h  CsvParser.cpp  CsvParser.h  HtmlExporter.cpp  HtmlExporter.h  Kdbx3Reader.cpp  Kdbx3Reader.h  Kdbx3Writer.cpp  Kdbx3Writer.h  Kdbx4Reader.cpp  Kdbx4Reader.h  Kdbx4Writer.cpp  Kdbx4Writer.h  KdbxReader.cpp  KdbxReader.h  KdbxWriter.cpp  KdbxWriter.h  KdbxXmlReader.cpp  KdbxXmlReader.h  KdbxXmlWriter.cpp  KdbxXmlWriter.h  KeePass1.h  KeePass1Reader.cpp  KeePass1Reader.h  KeePass2.cpp  KeePass2.h  KeePass2RandomStream.cpp  KeePass2RandomStream.h  KeePass2Reader.cpp  KeePass2Reader.h  KeePass2Writer.cpp  KeePass2Writer.h  OPUXReader.cpp  OPUXReader.h  OpData01.cpp  OpData01.h  OpVaultReader.cpp  (+6 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Application.cpp  Application.h  ApplicationSettingsWidget.cpp  ApplicationSettingsWidget.h  ApplicationSettingsWidgetGeneral.ui  ApplicationSettingsWidgetSecurity.ui  CategoryListWidget.cpp  CategoryListWidget.h  Clipboard.cpp  Clipboard.h  CloneDialog.cpp  CloneDialog.h  CloneDialog.ui  ColorPalette.h  DatabaseIcons.cpp  DatabaseIcons.h  DatabaseOpenDialog.cpp  DatabaseOpenDialog.h  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseOpenWidget.ui  DatabaseTabWidget.cpp  DatabaseTabWidget.h  DatabaseWidget.cpp  DatabaseWidget.h  DatabaseWidgetStateSync.cpp  DatabaseWidgetStateSync.h  DialogyWidget.cpp  DialogyWidget.h  EditWidget.cpp  EditWidget.h  EditWidgetIcons.cpp  EditWidgetIcons.h  EditWidgetIcons.ui  EditWidgetProperties.cpp  EditWidgetProperties.h  (+56 more)
tests/: CMakeLists.txt  FailDevice.cpp  FailDevice.h  TestAutoType.cpp  TestAutoType.h  TestBase32.cpp  TestBase32.h  TestBrowser.cpp  TestBrowser.h  TestCli.cpp  TestCli.h  TestConfig.cpp  TestConfig.h  TestCryptoHash.cpp  TestCryptoHash.h  TestCsvExporter.cpp  TestCsvExporter.h  TestCsvParser.cpp  TestCsvParser.h  TestDatabase.cpp  TestDatabase.h  TestDeletedObjects.cpp  TestDeletedObjects.h  TestEntry.cpp  TestEntry.h  TestEntryModel.cpp  TestEntryModel.h  TestEntrySearcher.cpp  TestEntrySearcher.h  TestFdoSecrets.cpp  TestFdoSecrets.h  TestGroup.cpp  TestGroup.h  TestGroupModel.cpp  TestGroupModel.h  TestHashedBlockStream.cpp  TestHashedBlockStream.h  TestHibp.cpp  TestHibp.h  TestIconDownloader.cpp  (+51 more)
(+360 files in other folders)
